modified to fix cropping issues on mobile

--- a/unit05/scss/_large.scss
+++ b/unit05/scss/_large.scss
@@ -11,7 +11,7 @@ main {
 }
 
 figure.founderImg {
-    padding: $gutter;
+    width: 750px !important;
 }
 
 .heroImage {
